feat: implement return resubmit and cancel lifecycle